--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -19,7 +19,7 @@
 
 .infoCardCallActionContainer :global(.vtex-button):hover {
     color: gray;
-    background-color: blue;
+    background-color: white;
     border: transparent;
 }
 
